--- a/blog/miradTheme/templates/index.html
+++ b/blog/miradTheme/templates/index.html
@@ -8,7 +8,7 @@
     
             <aside id="featured">
                 <div class="body">
-                    <img src="{{ SITEURL }}{{ article.img }}" style="width:100%;float:right;margin-bottom:20px;">
+                    <img src="{{ article.img }}" style="width:100%;float:right;margin-bottom:20px;">
                     <article dir="rtl" style="text-align:right;">
                         <h1 class="entry-title">{{ article.title }}</h1>
                         {% include 'article_infos.html' %}{{ article.content }}
