--- a/blog/miradTheme/templates/article.html
+++ b/blog/miradTheme/templates/article.html
@@ -5,7 +5,7 @@
     <div class="body">
       <article>
         <header>
-          <img src="{{ SITEURL }}{{ article.img }}">
+          <img src="{{ article.img }}">
           <h1 class="entry-title">
             <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
                title="Permalink to {{ article.title|striptags }}">{{ article.title}}</a></h1>
