authors pic added

--- a/blog/miradTheme/templates/author.html
+++ b/blog/miradTheme/templates/author.html
@@ -178,6 +178,7 @@
 </body>
 {% if author == 'وحید خرازی' %}
 <script type="text/javascript">
+
     document.getElementById('websitePlate').style.display='none';
     document.getElementById('instagramPlate').style.display='none';
     document.getElementById('twitterPlate').style.display='none';
@@ -191,7 +192,7 @@
     document.getElementById('githubMini').href='https://github.com/kharazi';
     document.getElementById('facebookMini').href='https://www.facebook.com/vahid.kharazi.9';
     document.getElementById('emailMini').href='mailto:vahid@kharazi.com?Subject=From%20Blog';
-
+    document.getElementsByClassName('blogLogo')[0].src="{{ SITEURL }}/theme/images/vahidkharazi.jpg";
     document.getElementById('bioPlate').innerHTML='';
 </script>
 {% endif %}
@@ -210,7 +211,7 @@
     document.getElementById('twitterMini').href='https://twitter.com/aryanbaghi';
     document.getElementById('instagramMini').href='http://instagram.com/aryanbaghi';    
     document.getElementById('emailMini').href='mailto:aryan.baghi.ce@gmail.com?Subject=From%20Blog';
-
+    document.getElementsByClassName('blogLogo')[0].src="{{ SITEURL }}/theme/images/aryanbaghi.jpg";
     document.getElementById('bioPlate').innerHTML='';
 </script>
 {% endif %}
@@ -229,26 +230,26 @@
     document.getElementById('twitterMini').href='https://twitter.com/s1nam';
     document.getElementById('instagramMini').href='http://instagram.com/s1nam';    
     document.getElementById('emailMini').href='mailto:itz.s1na@gmail.com?Subject=From%20Blog';
-
+    document.getElementsByClassName('blogLogo')[0].src="{{ SITEURL }}/theme/images/sinamahmoudi.jpg";
     document.getElementById('bioPlate').innerHTML='';
 </script>
 {% endif %}
 {% if author == 'امیر آجورلو' %}
 <script type="text/javascript">
-    document.getElementById('websitePlate').href='amirajorloo.com';
+    document.getElementById('websitePlate').href='htpp://amirajorloo.com';
     document.getElementById('facebook').href='https://www.facebook.com/amir.ajorloo';
     document.getElementById('github').href='https://github.com/theSinner';
     document.getElementById('twitter').href='https://twitter.com/the13thsinner';
     document.getElementById('instagram').href='http://instagram.com/thesinner13';
     document.getElementById('email').href='mailto:amirajorloo@gmail.com?Subject=From%20Blog';
 
-    document.getElementById('websiteMini').href='amirajorloo.com';
+    document.getElementById('websiteMini').href='http://amirajorloo.com';
     document.getElementById('facebookMini').href='https://www.facebook.com/amir.ajorloo';
     document.getElementById('githubMini').href='https://github.com/theSinner';
     document.getElementById('twitterMini').href='https://twitter.com/the13thsinner';
     document.getElementById('instagramMini').href='http://instagram.com/thesinner13';
     document.getElementById('emailMini').href='mailto:amirajorloo@gmail.com?Subject=From%20Blog';
-
+    document.getElementsByClassName('blogLogo')[0].src="{{ SITEURL }}/theme/images/amirajorloo.jpg";
     document.getElementById('bioPlate').innerHTML='';
 </script>
 {% endif %}
