added mirad.ir link

--- a/blog/miradTheme/templates/base.html
+++ b/blog/miradTheme/templates/base.html
@@ -41,7 +41,7 @@
   <div class="logo-bg">
   <div class="LaunchyardDetail">
     <p>
-    <a href="{{ SITEURL }}/"><img class="blogLogo" src="{{ SITEURL }}/theme/images/mirad.png" style="border-radius:20px;width:60%;border:2px solid #ffffff;"alt="میراد"></a>
+    <a href="http://mirad.ir" target="_blank"><img class="blogLogo" src="{{ SITEURL }}/theme/images/mirad.png" style="border-radius:20px;width:60%;border:2px solid #ffffff;"alt="میراد"></a>
     </p>
     <p style="font-family:dinar;font-size:1.8em;text-align:center;color:#ffffff;margin-bottom:0.7em;">
     میراد
