--- a/blog/miradTheme/templates/article.html
+++ b/blog/miradTheme/templates/article.html
@@ -7,7 +7,7 @@
         <header>
           <img src="{{ article.img }}">
           <h1 class="entry-title">
-            <a href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
+            <a class="indexLink" href="{{ SITEURL }}/{{ article.url }}" rel="bookmark"
                title="Permalink to {{ article.title|striptags }}">{{ article.title}}</a></h1>
 
         </header>
