--- a/blog/miradTheme/templates/index.html
+++ b/blog/miradTheme/templates/index.html
@@ -10,7 +10,7 @@
                 <div class="body">
                     <img src="{{ article.img }}" style="width:100%;float:right;margin-bottom:20px;">
                     <article dir="rtl" style="text-align:right;">
-                        <h1 class="entry-title">{{ article.title }}</h1>
+                        <h1 class="entry-title"><a class="indexLink" href="{{ SITEURL }}/{{ article.url }}">{{ article.title }}</a></h1>
                         {% include 'article_infos.html' %}{{ article.content }}
                     </article>
 		{% if loop.last and (articles_page.has_previous() or not articles_page.has_previous() and loop.length > 1) %} 
