--- a/blog/miradTheme/templates/analytics.html
+++ b/blog/miradTheme/templates/analytics.html
@@ -6,7 +6,7 @@
         })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
 
         ga('create', 'UA-52755705-2', 'auto');
-        ga('send', 'pageview', {'page': '/blog','title': 'blog'});
+        ga('send', 'pageview');
 
     </script>
 {% endif %}
