--- a/blog/miradTheme/templates/base.html
+++ b/blog/miradTheme/templates/base.html
@@ -167,7 +167,16 @@
                 
         </footer><!-- /#contentinfo -->
 
-{% include 'analytics.html' %}
+    <script>
+        (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+        (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+        m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+        })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+
+        ga('create', 'UA-52755705-2', 'auto');
+        ga('send', 'pageview', {'page': '/blog','title': 'blog'});
+
+    </script>
 {% include 'piwik.html' %}
 {% include 'facebook_script.html' %}
 {% include 'disqus_script.html' %}
