footnote-backref fixed

--- a/blog/miradTheme/static/css/main.css
+++ b/blog/miradTheme/static/css/main.css
@@ -894,5 +894,9 @@ article ul
 	position: relative;
 	top:-0.4em;
 	font-size: 0.7em;
-
+}
+.footnote-backref
+{
+	position: relative;
+	top:0.2em;
 }
