authors bio added

--- a/blog/miradTheme/templates/author.html
+++ b/blog/miradTheme/templates/author.html
@@ -193,7 +193,7 @@
     document.getElementById('facebookMini').href='https://www.facebook.com/vahid.kharazi.9';
     document.getElementById('emailMini').href='mailto:vahid@kharazi.com?Subject=From%20Blog';
     document.getElementsByClassName('blogLogo')[0].src="{{ SITEURL }}/theme/images/vahidkharazi.jpg";
-    document.getElementById('bioPlate').innerHTML='';
+    document.getElementById('bioPlate').innerHTML='وحید هم دانشجوی نرم افزار علم و صنعته و بیش‌تر دوست داره برای سرور برنامه‌نویسی کنه. به کار با داده‌های حجیم و پایگاه‌داده‌های غیررابطه‌ای، محاسبات سنگین کامپیوتری و سروکله زدن با برنامه‌های دارای رفتار هوشمند و الگوریتم‌ها هم علاقه داره.';
 </script>
 {% endif %}
 {% if author == 'آرین باقی' %}
@@ -212,7 +212,7 @@
     document.getElementById('instagramMini').href='http://instagram.com/aryanbaghi';    
     document.getElementById('emailMini').href='mailto:aryan.baghi.ce@gmail.com?Subject=From%20Blog';
     document.getElementsByClassName('blogLogo')[0].src="{{ SITEURL }}/theme/images/aryanbaghi.jpg";
-    document.getElementById('bioPlate').innerHTML='';
+    document.getElementById('bioPlate').innerHTML='آرین، دانشجوی نرم‌افزار علم و صنعته و علاقه‌ی زیادی به زبان‌های سطح پایین و سطح بالا داره. در زمینه‌ی وب و نرم‌افزار‌های تلفن همراه و پایانه‌های فروش بانکی فعالیت کرده. اخبارِ تکنولوژی و مخصوصا اخبار مربوط به اپل رو دنبال می‌کنه، طرفدارِ اپله ولی این به این معنی نیست که لینوکس و اندروید رو دوست نداره! تفریح مورد علاقش هم کوه رفتنه!';
 </script>
 {% endif %}
 {% if author == 'سینا محمودی' %}
@@ -231,7 +231,7 @@
     document.getElementById('instagramMini').href='http://instagram.com/s1nam';    
     document.getElementById('emailMini').href='mailto:itz.s1na@gmail.com?Subject=From%20Blog';
     document.getElementsByClassName('blogLogo')[0].src="{{ SITEURL }}/theme/images/sinamahmoudi.jpg";
-    document.getElementById('bioPlate').innerHTML='';
+    document.getElementById('bioPlate').innerHTML='سینا، دانشجو نرم‌افزاره و به نوشتن برنامه‌های مناسب برای سرور و تنظیم کردنشون طوری که تعداد کاربر بالا رو هم به خوبی پاسخگو باشن علاقه داره. خیلی از وقتش هم به خوندن مطالب علمی به خصوص مطالب مربوط به روانشناسی شناختی می‌گذره. تفریح هم معمولا کافه رفتن، یا طبیعت‌گردی.';
 </script>
 {% endif %}
 {% if author == 'امیر آجورلو' %}
@@ -250,7 +250,7 @@
     document.getElementById('instagramMini').href='http://instagram.com/thesinner13';
     document.getElementById('emailMini').href='mailto:amirajorloo@gmail.com?Subject=From%20Blog';
     document.getElementsByClassName('blogLogo')[0].src="{{ SITEURL }}/theme/images/amirajorloo.jpg";
-    document.getElementById('bioPlate').innerHTML='';
+    document.getElementById('bioPlate').innerHTML='توسعه‌دهنده‌‌ی وب و اپلیکیشن موبایل، یکمم وب دیزاینر. علاقه‌مند به طبیعت و ماشین و تیونینگ کردنش. موزیک هم تقریبا همیشه دور و برش داره پلی میشه. تفریحات اصلیشم رانندگی، برنامه‌نویسی، بام، موزیک گوش کردن، کافه‌رفتن و فست‌فود خوردنه. از ویندوز‌کار شد لینوکس کار، الانم که با مک کار می‌کنه، هیچوقتم از این روند پشیمون نبوده.';
 </script>
 {% endif %}
 
