--- a/blog/miradTheme/templates/base.html
+++ b/blog/miradTheme/templates/base.html
@@ -181,4 +181,24 @@
 {% include 'facebook_script.html' %}
 {% include 'disqus_script.html' %}
 </body>
+<script type="text/javascript">
+    $(document).ready(imReady);
+    function imReady()
+    {
+      $(function() {
+      $('a[href*=#]:not([href=#])').click(function() {
+          if (location.pathname.replace(/^\//,'') == this.pathname.replace(/^\//,'') && location.hostname == this.hostname) {
+            var target = $(this.hash);
+            target = target.length ? target : $('[name=' + this.hash.slice(1) +']');
+            if (target.length) {
+              $('html,body').animate({
+                scrollTop: target.offset().top
+              }, "slow");
+              return false;
+            }
+          }
+        });
+      });
+    }
+</script>
 </html>
