--- a/blog/miradTheme/templates/base.html
+++ b/blog/miradTheme/templates/base.html
@@ -52,7 +52,7 @@
       </a>
     </p>
     <p class="fullSizePanel social">
-      <a href="mailto:mirad@mirad.flowdock.com?Subject=From%20Blog" target="_top">
+      <a href="mailto:support@mirad.ir?Subject=From%20Blog" target="_top">
         ایمیل<i class="icon-email"></i>
       </a>
     </p>
@@ -71,6 +71,7 @@
         خوراک<i class="icon-rss-squared"></i>
       </a>
     </p>
+
     <p class="miniSizePanel">
       <a class="socialMini" href="feed://blog.mirad.ir/feeds/all.atom.xml" target="_blank">
         <i class="icon-rss-squared"></i>
@@ -81,7 +82,7 @@
       <a class="socialMini" href="https://www.facebook.com/miradapp" target="_blank">
         <i class="icon-facebook-squared"></i>
       </a>
-      <a class="socialMini" href="mailto:mirad@mirad.flowdock.com?Subject=From%20Blog" target="_blank">
+      <a class="socialMini" href="mailto:suppor@mirad.ir?Subject=From%20Blog" target="_blank">
         <i class="icon-email"></i>
       </a>
       <a class="socialMini" href="{{ SITEURL }}/">
